Fix sizes bug and make spacing more consistent

--- a/_sass/_image-collection.scss
+++ b/_sass/_image-collection.scss
@@ -2,12 +2,12 @@
 
 /* Image Collection */
 .image-collection {
-  padding: 2% 2% 0 2%;
+  padding: 2.7% 2.7% 0 2.7%;
   margin: 0 auto;
 }
 
 .image-collection__image {
-  padding-bottom: 2%;
+  padding-bottom: 2.7%;
   width: 100%;
   height: auto;
 }
@@ -31,10 +31,10 @@
 
   .image-collection__image--portrait {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 49%;
-        -ms-flex: 0 0 49%;
-            flex: 0 0 49%;
-    width: 49%;
+    -webkit-flex: 0 0 48.64864865%; /* 720 / 1480 % */
+        -ms-flex: 0 0 48.64864865%; /* 720 / 1480 % */
+            flex: 0 0 48.64864865%; /* 720 / 1480 % */
+    width: 48.65%;
     height: auto;
   }
 }
@@ -43,6 +43,6 @@
 @media screen and (min-width: 1538px) {
   .image-collection {
     width: 1538px;
-    padding: 29px /* 2% */
+    padding: 29px /* 2.7% */
   }
 }
